[gd_scene load_steps=7 format=3 uid="uid://cbc8adhn1jtwt"]

[ext_resource type="Script" path="res://Knightro.gd" id="1_y7w1d"]
[ext_resource type="Texture2D" uid="uid://d2770yiih38tm" path="res://image0.jpg" id="2_24k0d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v8nua"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_24k0d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_8myx0"]
resource_name = "knightro_dance"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1.5, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(1, 1), Vector2(1, 1), Vector2(2, 2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 0.9, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -6.28319, -6.28319, 3.48787e-16]
}

[sub_resource type="Animation" id="Animation_pf24i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_box8p"]
_data = {
"RESET": SubResource("Animation_pf24i"),
"knightro_dance": SubResource("Animation_8myx0")
}

[node name="Knightro" type="Node2D"]
script = ExtResource("1_y7w1d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_v8nua")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 122.0
offset_top = -103.0
offset_right = 399.0
offset_bottom = -10.0
text = "Click Anywhere to Begin."

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 281.0
offset_top = -58.0
offset_right = 316.0
offset_bottom = -27.0
text = "Yes
"

[node name="Button2" type="Button" parent="."]
visible = false
offset_left = 281.0
offset_top = -23.0
offset_right = 316.0
offset_bottom = 8.0
text = "No"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_box8p")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
